--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@babel/preset-env": "^7.24.6",
     "babel-jest": "^29.7.0",
     "jest": "^29.7.0",
+    "jest-html-reporter": "^3.10.2",
     "jest-puppeteer": "^10.0.1",
     "puppeteer": "^22.10.0"
   },
